--- a/nginx-ci-cd/index.html
+++ b/nginx-ci-cd/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hola Mundo!</h1>
     <h2>Soy Agustin Gomez D'Addario</h2>
+    <h3>Esta es una prueba técnica</h3>
 </body>
 </html>
