Reversion de archivo Ci/Cd

--- a/nginx-ci-cd/index.html
+++ b/nginx-ci-cd/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola Mundo!</title>
+    <title>Hola Mundo!!</title>
 </head>
 <body>
     <h1>Hola Mundo!</h1>
-    <h2>Soy Agustin Gomez D'Addario!</h2>
+    <h2>Soy Agustin Gomez D'Addario</h2>
     <h3>Esta es una prueba técnica para Craftech!</h3>
 </body>
 </html>
