--- a/punto-3-ci-cd-nginx/index.html
+++ b/punto-3-ci-cd-nginx/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Hola Mundo!</h1>
     <h2>Soy Agustin Gomez D'Addario!</h2>
-    <h3>Esta es una prueba técnica para Craftech</h3>
+    <h3>Esta es una prueba técnica para Craftech!</h3>
 </body>
 </html>
