--- a/punto-3-ci-cd-nginx/index.html
+++ b/punto-3-ci-cd-nginx/index.html
@@ -6,7 +6,7 @@
     <title>Hola Mundo!!</title>
 </head>
 <body>
-    <h1>Hola Mundo!!</h1>
+    <h1>Hola Mundo!</h1>
     <h2>Soy Agustin Gomez D'Addario!</h2>
     <h3>Esta es una prueba técnica para Craftech!</h3>
 </body>
